se identifican valores nulos

--- a/Reto Final.ipynb
+++ b/Reto Final.ipynb
@@ -22,6 +22,42 @@
     "ct= pd.read_csv('CountryTable.csv') \n",
     "ct"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "code                  0\n",
+       "name                  0\n",
+       "continent             0\n",
+       "region                0\n",
+       "surface_area          0\n",
+       "independence_year    47\n",
+       "population            0\n",
+       "life_expectancy      17\n",
+       "gnp                   0\n",
+       "gnp_old              61\n",
+       "local_name            1\n",
+       "government_form       0\n",
+       "head_of_state         3\n",
+       "capital               7\n",
+       "code2                 1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valores_nulos=ct.isnull().sum()\n",
+    "valores_nulos"
+   ]
   }
  ],
  "metadata": {
