se realiza copia de la base

--- a/Reto Final.ipynb
+++ b/Reto Final.ipynb
@@ -58,6 +58,16 @@
     "valores_nulos=ct.isnull().sum()\n",
     "valores_nulos"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Realizamos una copia del dataframe\n",
+    "cct=ct.copy()"
+   ]
   }
  ],
  "metadata": {
