se sustituyen valores nulos

--- a/Reto Final.ipynb
+++ b/Reto Final.ipynb
@@ -25,38 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "code                  0\n",
-       "name                  0\n",
-       "continent             0\n",
-       "region                0\n",
-       "surface_area          0\n",
-       "independence_year    47\n",
-       "population            0\n",
-       "life_expectancy      17\n",
-       "gnp                   0\n",
-       "gnp_old              61\n",
-       "local_name            1\n",
-       "government_form       0\n",
-       "head_of_state         3\n",
-       "capital               7\n",
-       "code2                 1\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "valores_nulos=ct.isnull().sum()\n",
     "valores_nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Realizamos una copia del dataframe\n",
+    "cct=ct.copy()"
    ]
   },
   {
@@ -65,8 +49,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Realizamos una copia del dataframe\n",
-    "cct=ct.copy()"
+    "#Sustituir valores nulos con promedio o media\n",
+    "cct[\"life_expectancy\"]=cct[\"life_expectancy\"].fillna(round(cct[\"life_expectancy\"].mean(),1))\n",
+    "cct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sustituir valores nulos con mediana\n",
+    "cct[\"gnp_old\"]=cct[\"gnp_old\"].fillna(round(cct[\"gnp_old\"].median(),1))\n",
+    "cct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sustituir valores nulos por un valor numérico en  concreto \n",
+    "#Filtro por columnas\n",
+    "cct[\"independence_year\"]= cct[\"independence_year\"].fillna(1900) \n",
+    "cct\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sustituir valores nulos por un string en  concreto \n",
+    "#Filtro por columnas\n",
+    "cct[\"local_name\"] =cct[\"local_name\"].fillna(\"Inexistente\") \n",
+    "cct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sustituir valores nulos por un string en  concreto \n",
+    "#Filtro por columnas\n",
+    "cct[\"head_of_state\"] =cct[\"head_of_state\"].fillna(\"Desconocido\") \n",
+    "cct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sustituir valores nulos por un valor numérico en  concreto \n",
+    "#Filtro por columnas\n",
+    "cct[\"capital\"]= cct[\"capital\"].fillna(0) \n",
+    "cct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sustituir valores nulos por un string en  concreto \n",
+    "#Filtro por columnas\n",
+    "cct[\"code2\"] =cct[\"code2\"].fillna(\"NA\") \n",
+    "cct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Corroboramos valores nulos\n",
+    "valores_nulos=cct.isnull().sum()\n",
+    "valores_nulos"
    ]
   }
  ],
