Outliers por desviacion estandar

--- a/Reto Final.ipynb
+++ b/Reto Final.ipynb
@@ -127,13 +127,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "code                 0\n",
+       "name                 0\n",
+       "continent            0\n",
+       "region               0\n",
+       "surface_area         0\n",
+       "independence_year    0\n",
+       "population           0\n",
+       "life_expectancy      0\n",
+       "gnp                  0\n",
+       "gnp_old              0\n",
+       "local_name           0\n",
+       "government_form      0\n",
+       "head_of_state        0\n",
+       "capital              0\n",
+       "code2                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Corroboramos valores nulos\n",
     "valores_nulos=cct.isnull().sum()\n",
     "valores_nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Método aplicando desviación estandar. Encuentro los valores extremos\n",
+    "y=cct[\"gnp_old\"]\n",
+    "Limite_Superior= y.mean() + 3*y.std()\n",
+    "Limite_Inferior= y.mean() - 3*y.std()\n",
+    "print(\"Limite superior permitido\", Limite_Superior)\n",
+    "print(\"Limite inferior permitido\", Limite_Inferior)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Encontramos Ouliers\n",
+    "outliers= cct[(y>Limite_Superior)|(y<Limite_Inferior)]\n",
+    "outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Obtenemos datos limpios\n",
+    "data_clean= cct[(y<=Limite_Superior)&(y>=Limite_Inferior)]\n",
+    "data_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Realizamos diagrama de caja o bigote\n",
+    "fig = plt.figure(figsize =(5, 3))\n",
+    "plt.boxplot(data_clean[\"gnp_old\"]) \n",
+    "plt.title(\"Outliers de GNP OLD\")\n",
+    "plt.show() #dibujamos el diagrama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Método aplicando desviación estandar. Encuentro los valores extremos\n",
+    "y=cct[\"population\"]\n",
+    "Limite_Superior= y.mean() + 3*y.std()\n",
+    "Limite_Inferior= y.mean() - 3*y.std()\n",
+    "print(\"Limite superior permitido\", Limite_Superior)\n",
+    "print(\"Limite inferior permitido\", Limite_Inferior)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Encontramos Ouliers\n",
+    "outliers1= cct[(y>Limite_Superior)|(y<Limite_Inferior)]\n",
+    "outliers1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Obtenemos datos limpios\n",
+    "data_clean1= cct[(y<=Limite_Superior)&(y>=Limite_Inferior)]\n",
+    "data_clean1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Realizamos diagrama de caja o bigote\n",
+    "fig = plt.figure(figsize =(5, 3))\n",
+    "plt.boxplot(data_clean1[\"population\"]) \n",
+    "plt.title(\"Outliers de POPULATION\")\n",
+    "plt.show() #dibujamos el diagrama"
    ]
   }
  ],
