outliers por metodo intercuartil

--- a/Reto Final.ipynb
+++ b/Reto Final.ipynb
@@ -259,6 +259,222 @@
     "plt.title(\"Outliers de POPULATION\")\n",
     "plt.show() #dibujamos el diagrama"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Método aplicando Cuartiles. Encuentro cuartiles 0.25 y 0.75\n",
+    "y=cct[\"gnp_old\"]\n",
+    "\n",
+    "percentile25=y.quantile(0.25) #Q1\n",
+    "percentile75=y.quantile(0.75) #Q3\n",
+    "iqr= percentile75 - percentile25\n",
+    "\n",
+    "Limite_Superior_iqr= percentile75 + 1.3*iqr\n",
+    "Limite_Inferior_iqr= percentile25 - 1.3*iqr\n",
+    "print(\"Limite superior permitido\", Limite_Superior_iqr)\n",
+    "print(\"Limite inferior permitido\", Limite_Inferior_iqr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Encontramos Ouliers\n",
+    "outliers_iqr= cct[(y>Limite_Superior_iqr)|(y<Limite_Inferior_iqr)]\n",
+    "outliers_iqr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Obtenemos datos limpios\n",
+    "data_clean_iqr= cct[(y<=Limite_Superior_iqr)&(y>=Limite_Inferior_iqr)]\n",
+    "data_clean_iqr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Realizamos diagrama de caja o bigote\n",
+    "fig = plt.figure(figsize =(5, 3))\n",
+    "plt.boxplot(data_clean_iqr[\"gnp_old\"]) \n",
+    "plt.title(\"Outliers de GNP OLD\")\n",
+    "plt.show() #dibujamos el diagrama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Método aplicando Cuartiles. Encuentro cuartiles 0.25 y 0.75\n",
+    "s=cct[\"surface_area\"]\n",
+    "\n",
+    "percentile25=y.quantile(0.25) #Q1\n",
+    "percentile75=y.quantile(0.75) #Q3\n",
+    "iqr= percentile75 - percentile25\n",
+    "\n",
+    "Limite_Superior_iqr= percentile75 + 1.3*iqr\n",
+    "Limite_Inferior_iqr= percentile25 - 1.3*iqr\n",
+    "print(\"Limite superior permitido\", Limite_Superior_iqr)\n",
+    "print(\"Limite inferior permitido\", Limite_Inferior_iqr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Encontramos Ouliers\n",
+    "outliers1_iqr= cct[(s>Limite_Superior_iqr)|(s<Limite_Inferior_iqr)]\n",
+    "outliers1_iqr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Obtenemos datos limpios\n",
+    "data_clean1_iqr= cct[(s<=Limite_Superior_iqr)&(s>=Limite_Inferior_iqr)]\n",
+    "data_clean1_iqr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Realizamos diagrama de caja o bigote\n",
+    "fig = plt.figure(figsize =(5, 3))\n",
+    "plt.boxplot(data_clean1_iqr[\"surface_area\"]) \n",
+    "plt.title(\"Outliers de SURFACE AREA\")\n",
+    "plt.show() #dibujamos el diagrama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Método aplicando Cuartiles. Encuentro cuartiles 0.25 y 0.75\n",
+    "le=cct[\"life_expectancy\"]\n",
+    "\n",
+    "percentile25=le.quantile(0.25) #Q1\n",
+    "percentile75=le.quantile(0.75) #Q3\n",
+    "iqr= percentile75 - percentile25\n",
+    "\n",
+    "Limite_Superior_iqr= percentile75 + 1.3*iqr\n",
+    "Limite_Inferior_iqr= percentile25 - 1.3*iqr\n",
+    "print(\"Limite superior permitido\", Limite_Superior_iqr)\n",
+    "print(\"Limite inferior permitido\", Limite_Inferior_iqr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Encontramos Ouliers\n",
+    "outliers2_iqr= cct[(le>Limite_Superior_iqr)|(le<Limite_Inferior_iqr)]\n",
+    "outliers2_iqr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Obtenemos datos limpios\n",
+    "data_clean2_iqr= cct[(le<=Limite_Superior_iqr)&(le>=Limite_Inferior_iqr)]\n",
+    "data_clean2_iqr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Realizamos diagrama de caja o bigote\n",
+    "fig = plt.figure(figsize =(5, 3))\n",
+    "plt.boxplot(data_clean2_iqr[\"life_expectancy\"]) \n",
+    "plt.title(\"Outliers de LIFE EXPECTANCY\")\n",
+    "plt.show() #dibujamos el diagrama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Método aplicando Cuartiles. Encuentro cuartiles 0.25 y 0.75\n",
+    "p=cct[\"population\"]\n",
+    "\n",
+    "percentile25=p.quantile(0.25) #Q1\n",
+    "percentile75=p.quantile(0.75) #Q3\n",
+    "iqr= percentile75 - percentile25\n",
+    "\n",
+    "Limite_Superior_iqr= percentile75 + 1.3*iqr\n",
+    "Limite_Inferior_iqr= percentile25 - 1.3*iqr\n",
+    "print(\"Limite superior permitido\", Limite_Superior_iqr)\n",
+    "print(\"Limite inferior permitido\", Limite_Inferior_iqr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Encontramos Ouliers\n",
+    "outliers3_iqr= cct[(p>Limite_Superior_iqr)|(p<Limite_Inferior_iqr)]\n",
+    "outliers3_iqr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Obtenemos datos limpios\n",
+    "data_clean3_iqr= cct[(p<=Limite_Superior_iqr)&(p>=Limite_Inferior_iqr)]\n",
+    "data_clean3_iqr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Realizamos diagrama de caja o bigote\n",
+    "fig = plt.figure(figsize =(5, 3))\n",
+    "plt.boxplot(data_clean3_iqr[\"population\"]) \n",
+    "plt.title(\"Outliers de POPULATION\")\n",
+    "plt.show() #dibujamos el diagrama"
+   ]
   }
  ],
  "metadata": {
