--- a/Reto Final.ipynb
+++ b/Reto Final.ipynb
@@ -501,6 +501,79 @@
     "plt.title(\"Outliers de POPULATION\")\n",
     "plt.show() #dibujamos el diagrama"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reestructurar el Dataframe\n",
+    "cct1 = cct.dropna()\n",
+    "Cct1= cct1.pivot(index='code', columns='continent',  values='population')\n",
+    "#Data=Data [['female']] #Aqui se pueden editar las columnas que se desean mostrar en values\n",
+    "Cct1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lineplot o grafico lineal\n",
+    "Cct1.iplot(kind='line', xTitle='Codigo', yTitle='Poblacion', title='Poblacion por continente')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Barplot o grafico de barras\n",
+    "Cct1m = Cct1[Cct1.index.isin([\"continent\", \"population\"])]\n",
+    "\n",
+    "# plotting\n",
+    "Cct1m.iplot(kind='bar', xTitle='Codigo',\n",
+    "                           yTitle='Poblacion', title='Muestra de poblacion por continente')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boxplot o grafico de caja\n",
+    "\n",
+    "Cct1.iplot(kind='box', xTitle='Codigo',\n",
+    "                    yTitle='Poblacion', title='Rango de poblacion por continente')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Histplot o Histograma\n",
+    "\n",
+    "Cct1[['Africa']].iplot(kind='hist',xTitle='Population', \n",
+    "                               title='Distibución de poblacion por continente')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Scatterplot o Mapa de dispersión\n",
+    "\n",
+    "Cct1[['Africa']].iplot(kind='scatter', mode='markers',xTitle='Nombres', \n",
+    "                               title='Distibución de poblacion en Africa')"
+   ]
   }
  ],
  "metadata": {
