--- a/Reto Final.ipynb
+++ b/Reto Final.ipynb
@@ -574,6 +574,79 @@
     "Cct1[['Africa']].iplot(kind='scatter', mode='markers',xTitle='Nombres', \n",
     "                               title='Distibución de poblacion en Africa')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reestructurar el Dataframe\n",
+    "cct2 = cct.dropna()\n",
+    "Cct2= cct2.pivot(index='name', columns='region',  values='surface_area')\n",
+    "#Data=Data [['female']] #Aqui se pueden editar las columnas que se desean mostrar en values\n",
+    "Cct2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lineplot o grafico lineal\n",
+    "Cct2.iplot(kind='line', xTitle='Nombre', yTitle='Area', title='Area por region')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Barplot o grafico de barras\n",
+    "Cct2m = Cct2[Cct2.index.isin([\"region\", \"surface_area\"])]\n",
+    "\n",
+    "# plotting\n",
+    "Cct2m.iplot(kind='bar', xTitle='Nombre',\n",
+    "                           yTitle='Area', title='Muestra de area por region')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boxplot o grafico de caja\n",
+    "\n",
+    "Cct2.iplot(kind='box', xTitle='Nombre',\n",
+    "                    yTitle='Area', title='Rango de area por region')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Histplot o Histograma\n",
+    "\n",
+    "Cct2[['Caribbean']].iplot(kind='hist',xTitle='Nombre', \n",
+    "                               title='Distibución de area por region')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Scatterplot o Mapa de dispersión\n",
+    "\n",
+    "Cct2[['Caribbean']].iplot(kind='scatter', mode='markers',xTitle='Nombres', \n",
+    "                               title='Distibución de area por region')"
+   ]
   }
  ],
  "metadata": {
