tercera tranformacion y graficos

--- a/Reto Final.ipynb
+++ b/Reto Final.ipynb
@@ -647,6 +647,79 @@
     "Cct2[['Caribbean']].iplot(kind='scatter', mode='markers',xTitle='Nombres', \n",
     "                               title='Distibución de area por region')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reestructurar el Dataframe\n",
+    "cct3 = cct.dropna()\n",
+    "Cct3= cct3.pivot(index='local_name', columns='government_form',  values='life_expectancy')\n",
+    "#Data=Data [['female']] #Aqui se pueden editar las columnas que se desean mostrar en values\n",
+    "Cct3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lineplot o grafico lineal\n",
+    "Cct3.iplot(kind='line', xTitle='Nombre', yTitle='Expectativa', title='Expectativa po forma')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Barplot o grafico de barras\n",
+    "Cct3m = Cct3[Cct3.index.isin([\"government_form\", \"life_expectancy\"])]\n",
+    "\n",
+    "# plotting\n",
+    "Cct3m.iplot(kind='bar', xTitle='Nombre',\n",
+    "                           yTitle='Expectativa', title='Muestra de expectativa por forma')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boxplot o grafico de caja\n",
+    "\n",
+    "Cct3.iplot(kind='box', xTitle='Nombre',\n",
+    "                    yTitle='Expectativa', title='Rango de expectativa por forma')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Histplot o Histograma\n",
+    "\n",
+    "Cct3[['Republic']].iplot(kind='hist',xTitle='Nombre', \n",
+    "                               title='Distibución de expectativa por forma')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Scatterplot o Mapa de dispersión\n",
+    "\n",
+    "Cct3[['Republic']].iplot(kind='scatter', mode='markers',xTitle='Nombres', \n",
+    "                               title='Distibución de expectativa por forma')"
+   ]
   }
  ],
  "metadata": {
